# Youtube-Downloader-Yt-Dlp

./: .flake8  .gitignore  MANIFEST.in  Makefile  README.md  requirements-dev.txt  requirements.txt  setup.cfg  setup.py
youpy/: common.py  downloadHelper.py  gui.py  guiService.py  info.md  main.py  streamsHelper.py  tui.py  youtubeCore.py
youpy/static/: app.js  style.css
youpy/templates/: index.html
