[metadata]
name = youpy
description = A simple command line tool for downloading from YouTube powered by yt-dlp.
author = Ahmed Tarek
author_email = ahmedtarek4377@gamil.com
version = 0.1.0
url = https://github.com/Ryen-042/Youtube-Downloader-Yt-Dlp
keywords = Python, YouTube, yt-dlp, download, cli
platforms = [win32, linux, darwin]
classifiers =
    Development Status :: 5 - Production/Stable
    Environment :: Console
    Environment :: Win32 (MS Windows)
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Programming Language :: Python :: 3 :: Only

# No modification needed.
license = MIT
license_files = LICENSE
long_description_content_type = text/markdown
long_description = file: README.md

[options]
zip_safe = false
include_package_data = true
python_requires = >= 3.6
packages = find:
package_dir =
    youpy = youpy

install_requires = file: requirements.txt

# Docs: https://setuptools.pypa.io/en/latest/userguide/datafiles.html
[options.package_data]
youpy =
    SFX/*


# The same concept but exclude the files/folders from the package instead.
[options.exclude_package_data]
* =
    __pycache__

[options.entry_points]
console_scripts =
   youpy = youpy.main:run
